# myriadctl

./: .gitignore  Makefile.am  NEWS  autogen.sh  configure.ac  dldt-no-boot.patch
include/: Makefile.am
lib/: Makefile.am  mvnc_api.c
src/: Makefile.am  myriadctl.c
systemd/: Makefile.am  myriad.service
