noinst_HEADERS = mvLog.h mvMacros.h mvnc_data.h mvnc_ext.h mvnc.h \
	mvnc_tool.h mvStringUtils.h ncCommPrivate.h ncPrivateTypes.h \
	pcie_host.h usb_boot.h watchdog.h XLinkDispatcher.h XLink.h \
	XLinkPlatform.h XLinkPlatform_tool.h XLinkPrivateDefines.h \
	XLinkPublicDefines.h XLink_tool.h XLinkVersion.h

