noinst_HEADERS = mvnc_data.h mvnc_ext.h mvnc.h mvnc_tool.h \
	ncCommPrivate.h ncPrivateTypes.h pcie_host.h usb_boot.h \
	XLinkDispatcher.h XLinkDispatcherImpl.h XLink.h XLinkLog.h \
	XLinkMacros.h XLinkPlatform.h XLinkPlatformTool.h \
	XLinkPrivateDefines.h XLinkPrivateFields.h XLinkPublicDefines.h \
	XLinkStream.h XLinkStringUtils.h XLinkTool.h XLinkVersion.h \
	watchdog.h
